css/main.css
/*ANIMATIONS*/
@-webkit-keyframes arrow {
  0% {top: 5px;}
  25% {top: 15px;}
  100% {top: 5px;}
}

@keyframes arrow {
  0% {top: 5px;}
  50% {top: 15px;}
  100% {top: 5px;}
}

@-webkit-keyframes arrow-right {
  0% {transform: rotate(-135deg);}
  50% {transform: rotate(-150deg);}
  100% {transform: rotate(-135deg);}
}

@keyframes arrow-right {
  0% {transform: rotate(-135deg);}
  50% {transform: rotate(-150deg);}
  100% {transform: rotate(-135deg);}
}
@-webkit-keyframes arrow-left {
  0% {transform: rotate(-135deg);}
  50% {transform: rotate(-150deg);}
  100% {transform: rotate(-135deg);}
}

@keyframes arrow-left {
  0% {transform: rotate(135deg);}
  50% {transform: rotate(150deg);}
  100% {transform: rotate(135deg);}
}

/*RESET*/

body, h1, p, a, ul, li {
  padding: 0px;
  margin: 0px;
  font-family: 'Josefin Sans', sans-serif;
  color: black;
  cursor: default;
}

/*NAV AND PAGE DOWN ICONS*/

.square {
  position: fixed;
  padding: 10px;
  top: 20px;
  width: 60px;
  height: 50px;
  cursor: pointer;
  background-color: black;
  z-index: 99;
}

.nav {
  left: 20px;
  display: flex;
  align-items: center;
  transition: ease 0.4s;
}

.navicon {
  margin: 0 10px;
  width: 40px;
}

.navline {
  height: 3px;
  width: 40px;
  background-color: white;
  transition: ease 0.4s;
}

.top {
  margin-bottom: 10px;
}

.middle {
  margin-top: 10px;
  margin-bottom: 10px;
}

.bottom {
  margin-top: 10px;
}

.nav:hover .top {
  width: 30px;
}

.nav:hover .bottom {
  width: 50px;
}

.nav-open {
  width: 260px;
}

.nav-links {
  width: 180px;
  margin: 0 10px;
  visibility: hidden;
  opacity: 0;
  display: flex;
  justify-content: space-between;
  transition: ease 0.5s;
}

.nav-link {
  color: white;
  transition: ease 0.4s;
  padding: 5px;
}

.nav-link:hover {
  color: lightgray;
}

.page-down {
  right: 20px;
}

.arrow-line-down {
  position: absolute;
  top: 0;
  left: 28.5px;
  background-color: white;
  width: 3px;
  height: 35px;
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

.arrow {
  position: relative;
  top: 5px;
  transition: ease 0.25s;
}

.arrow-bounce {
  animation: arrow 1s infinite;
  animation-timing-function: ease;
  animation-play-state: running;
  -webkit-animation: arrow 1s infinite;
  -webkit-animation-timing-function: ease;
  -webkit-animation-play-state: running;
}

.arrow-line-right {
  position: absolute;
  top: 33.8px;
  left: 28.5px;
  width: 3px;
  height: 18px;
  transform: rotate(-135deg);
  transform-origin: 50% 0%;
  background-color: white;
  border-top-left-radius: 1px;
}

.right-arrow-animation {
  animation: arrow-right 1s infinite;
  animation-timing-function: ease;
  animation-play-state: running;
  -webkit-animation: arrow-right 1s infinite;
  -webkit-animation-timing-function: ease;
  -webkit-animation-play-state: running;
}

.arrow-line-left {
  position: absolute;
  top: 33.8px;
  left: 28.5px;
  width: 3px;
  height: 18px;
  transform: rotate(135deg);
  transform-origin: 50% 0%;
  background-color: white;
  border-top-right-radius: 1px;
}

.left-arrow-animation {
  animation: arrow-left 1s infinite;
  animation-timing-function: ease;
  animation-play-state: running;
  -webkit-animation: arrow-left 1s infinite;
  -webkit-animation-timing-function: ease;
  -webkit-animation-play-state: running;
}

.top-cross {
  margin-bottom: 10px;
  transform: translateY(13px) rotate(45deg);
}

.mid-cross {
  margin-top: 10px;
  margin-bottom: 10px;
  background-color: black;
}

.bottom-cross {
  margin-top: 10px;
  transform: translateY(-13px) rotate(-45deg);
}

/*BLOCKS ON WEBSITE*/

.wrapper {
  display: block;
  padding: 30px 0;
}

/*NAME PAGE*/

.name {
  position: relative;
  text-align: center;
  font-size: 20vh;
  white-space: nowrap;
  margin: 120px 0px;
}

.name-page {
  background-color: #f2f2f2;
}

/* ABOUT PAGE */

.about-outer {
  position: relative;
  text-align: center;
  margin: 30px 50px;
}

.about {
  font-size: 4vh;
}

.links-container {
  padding: 10px;
  display: flex;
  justify-content: space-between;
}

.link-icon {
  height: 20px;
  background-size: contain;
  background-repeat: no-repeat;
}

.pdf {
  background-image: url("../images/pdf.png");
}

.links {
  display: block;
  cursor: pointer;
}

.links:hover {
  color: red;
  transition: ease 0.5s;
}

.about-page {
  background-color: #e6e6e6;
}

/*PROJECTS*/

.project {
  text-align: center;
}

.project-main {
  background-color: lightgreen;
}

.project-title {
  font-size: 50px;
  margin-bottom: 50px;
}

.recordcloud {
  background-color: #f68989;
}

.cac {
  background-color: #fb7070;
}

.pae {
  background-color: pink;
}

.project-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.screenshot {
  margin: 0px 50px 30px 50px;
  cursor: pointer;
  height: 40vh;
}

.screenshot-image {
  position: relative;
  bottom: 0px;
  right: 0px;
  height: 100%;
  transition: ease 0.5s;
}

.screenshot:hover .screenshot-image {
  height: 110%;
}

.project-description {
  margin: 0 50px;
  font-size: 12px;
}

/*CONTACT*/

.contact-title {
  text-align: center;
  font-size: 50px;
  margin-bottom: 50px;
}

.contact {
  background-color: lightblue;
}

.contact-links {
  display: flex;
  flex-direction: column;
  align-items: center;
}

